--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true">
 
 	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/app_bar"
@@ -28,24 +29,18 @@
 			app:tabMode="auto" />
 	</com.google.android.material.appbar.AppBarLayout>
 
-	<LinearLayout
-		android:orientation="vertical"
+	<androidx.viewpager.widget.ViewPager
+		android:id="@+id/viewpager"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-		<androidx.viewpager.widget.ViewPager
-			android:id="@+id/viewpager"
-			android:layout_weight="1"
-			android:layout_width="match_parent"
-			android:layout_height="0dp" />
-
-		<com.google.android.gms.ads.AdView
-			android:id="@+id/updateInformationAdView"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="bottom|center_horizontal"
-			app:adSize="BANNER"
-			app:adUnitId="@string/advertising_banner_unit_id" />
-	</LinearLayout>
+	<com.google.android.gms.ads.AdView
+		android:id="@+id/updateInformationAdView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|center_horizontal"
+		android:layout_marginBottom="0dp"
+		app:adSize="BANNER"
+		app:adUnitId="@string/advertising_banner_unit_id" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
